userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: userprofile
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true      
        image: registryrhx6769.azurecr.io/userprofile:1.0
        ports:
        - containerPort: 80
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
           secretProviderClass: "azure-ohkeyvault"
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: userprofile
