api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
  name: api-ingress
  namespace: api
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/docs/poi
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/healthcheck/poi
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: poi
          servicePort: 80
        path: /swagger/docs/poi
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/docs/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/healthcheck/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /swagger/docs/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/json
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/docs/user
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/healthcheck/user
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /swagger/docs/user
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/docs/user-java
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/documentation/user-java
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/healthcheck/user-java
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/swagger-resources
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/api-docs
