web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
  name: tripviewer-ingress
  namespace: web
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /
